# umap-wasm

./: .gitignore  .tool-versions  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  elarsaks-umap-wasm-0.3.2.tgz  jest.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
.cargo/: config.toml
.github/workflows/: node.js.yml  publish.yml
.yarn/releases/: yarn-4.12.0.cjs
docs/: WASM_NN_DESCENT.md
examples/: wasm-nn-descent-example.ts
lib/: umap-js.js  umap-js.min.js  umap-js.min.js.LICENSE.txt
scripts/: patch-wasm-csp.cjs
src/: heap.ts  index.ts  lib.ts  matrix.ts  nn_descent.ts  nn_descent_wrapper.ts  tree.ts  umap.ts  utils.ts  wasmBridge.ts
src/config/: nnDescentConfig.ts
src/types/: ml-levenberg-marquardt.d.ts
test/: smoke.playwright.test.ts  test_data.ts  umap.test.ts  wasmDistance.test.ts  wasmMatrix.test.ts  wasmNNDescent.test.ts  wasmOptimizer.test.ts  wasmTree.test.ts
wasm/: Cargo.toml  DISTANCE_FUNCTIONS.md
wasm/pkg/: package.json  umap_wasm_core.d.ts  umap_wasm_core.js  umap_wasm_core_bg.js  umap_wasm_core_bg.wasm  umap_wasm_core_bg.wasm.d.ts
wasm/pkg/node/: package.json  umap_wasm_core.d.ts  umap_wasm_core.js  umap_wasm_core_bg.wasm  umap_wasm_core_bg.wasm.d.ts
wasm/pkg/web/: package.json  umap_wasm_core.d.ts  umap_wasm_core.js  umap_wasm_core_bg.wasm  umap_wasm_core_bg.wasm.d.ts
wasm/src/: distances.rs  heap.rs  lib.rs  matrix.rs  nn_descent.rs  optimizer.rs  tree.rs
webpack/: lib.config.mjs  lib.config.ts  lib.min.config.mjs
