[package]
name = "umap-wasm-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "UMAP core routines in Rust compiled to WebAssembly"
repository = ""

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wee_alloc = { version = "0.4", optional = true }
getrandom = { version = "0.2", features = ["js"] }

[features]
default = []
allocator = ["wee_alloc"]

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
